--- a/q1/tests/in/04.in
+++ b/q1/tests/in/04.in
@@ -1,8 +1,8 @@
-10 3 4
-SMAI 0.8 3 2 0 2
-NLP 0.95 4 1 0
-CV 0.9 2 2 1 2
-DSA 0.75 5 3 0 1 2
+10 0 4
+SMAI 0.8 3 0
+NLP 0.95 4 0
+CV 0.9 2 0
+DSA 0.75 5 0
 0.8 0 3 1 1
 0.6 3 1 2 3
 0.85 2 1 0 1
@@ -13,6 +13,3 @@ DSA 0.75 5 3 0 1 2
 0.1 0 3 1 2
 0.85 1 0 3 1
 0.3 0 1 2 1
-PRECOG 3 1
-CVIT 4 2
-RRC 1 3
